Fixed spacing between sections

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ h1, h2, h3 {
 }
 
 section:not(#hero):not(#cta){
-  padding: 40px 0;
+  padding: 20px 0;
 }
 
 @media(min-width: 993px){
